more updates to notebooks

--- a/code/1_train_sports2.ipynb
+++ b/code/1_train_sports2.ipynb
@@ -15,13 +15,9 @@
    "id": "f76a3db4",
    "metadata": {},
    "source": [
-    "All our training is done using 10k / 2k / 2k sized data for train / val / test.\n",
-    "\n",
     "This notebook narrows images to only those with sports in them. We then randomly sample these to get 10k / 2k / 2k. This gives us a slightly smaller vocab, but same size dataset. \n",
     "\n",
-    "We only train on images containing sports categories. \n",
-    "\n",
-    "This is an alternative version of the v2 sports training. We reduce embed size to 512 from 1024, and increase the size of the training set and vocab. Finally, because the training set is ~10% of full val2017 training set, we reduce the frequency threshold parameter for the vocabulary generation to 4. This increases vocab size from 2576 with threshold = 5 to 2921 with threshold = 4."
+    "We only train on images containing sports categories. "
    ]
   },
   {
