--- a/code/1_train_sports_enc.ipynb
+++ b/code/1_train_sports_enc.ipynb
@@ -21,7 +21,9 @@
     "\n",
     "We only train on images containing sports categories. \n",
     "\n",
-    "This is an alternative version of the v2 sports training. We reduce embed size to 512 from 1024, and increase the size of the training set and vocab. Finally, because the training set is ~10% of full val2017 training set, we reduce the frequency threshold parameter for the vocabulary generation to 4. This increases vocab size from 2576 with threshold = 5 to 2921 with threshold = 4."
+    "This is an alternative version of sport_v2. It uses different encoder architecture: one final fully connected layer rather than the two layers we use everywhere else. NOTE: WE IMPLEMENTED THIS OUTSIDE OUR USUAL WORK FLOW THAT THE CODE WAS DESIGNED FOR. IT INVOLVED TEMPORARILY CHANGING THE CODE IN THE ENCODER CLASS, AND THIS NOTEBOOK WILL NOT SUCCESSFULLY RUN WITHOUT CHANGING THE ENCODER MODULE.\n",
+    "\n",
+    "We leave this notebook in for completeness, and because it is a pointer for future code development. We would definitely have the option for a different encoder architecture in future."
    ]
   },
   {
