--- a/code/3_Compare_models.ipynb
+++ b/code/3_Compare_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "86f2f4d6-5c02-4a88-a2cd-fa96d446da23",
    "metadata": {
     "tags": []
@@ -66,20 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "04734c26-db29-4536-97fd-7e15ef88fd19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open('../model/summary_results/result_summary.json', 'r') as f:\n",
-    "#     results = json.load(f)\n",
+    "with open('../model/summary_results/result_summary.json', 'r') as f:\n",
+    "    results = json.load(f)\n",
     "\n",
     "max_idx = 45\n",
     "train_loss_df = pd.DataFrame(index = range(max_idx))\n",
     "val_loss_df = pd.DataFrame(index = range(max_idx))\n",
     "bleu_df = pd.DataFrame(index = results.keys(), columns=['BLEU-1', 'BLEU-2', 'BLEU-3', 'BLEU-4'])\n",
     "summary_df = pd.DataFrame(index = results.keys(), \n",
-    "                          columns=['embed_size' , 'hidden_size', 'LSTM_layers', 'vocab_size',\n",
+    "                          columns=['embed_size' , 'hidden_size', 'LSTM_layers', 'vocab_size', 'training set size',\n",
     "                                   'batch_size', 'train_loss_10_epochs', 'val_loss_10_epochs', 'BLEU-4'])\n",
     "\n",
     "for key, val in results.items():\n",
@@ -87,7 +87,7 @@
     "    val_loss_df[key] = val['val_loss'] + [np.nan] * (max_idx - len(val['val_loss']))\n",
     "    bleu_df.loc[key,\n",
     "                ['BLEU-1', 'BLEU-2', 'BLEU-3', 'BLEU-4']] = [b * 100 for b in val['bleu_score']] \n",
-    "    for field in ['embed_size' , 'hidden_size', 'LSTM_layers', 'vocab_size', 'batch_size']:\n",
+    "    for field in ['embed_size' , 'hidden_size', 'LSTM_layers', 'vocab_size', 'training set size', 'batch_size']:\n",
     "        try: \n",
     "            summary_df.at[key, field] = val[field]\n",
     "        except:\n",
@@ -107,22 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d5be83a7-261d-44cc-b113-a5ce6eb45bf7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "['embed_size' , 'hidden_size', 'LSTM_layers', 'vocab_size', 'batch_size']\n",
-    "results['sports_encoder']['embed_size'] = 512\n",
-    "results['sports_encoder']['hidden_size'] = 512\n",
-    "results['sports_encoder']['LSTM_layers'] = 3\n",
-    "results['sports_encoder']['vocab_size'] = 2921\n",
-    "results['sports_encoder']['batch_size'] = 128\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "1905cb0c-6022-4fe6-ada4-65256f7d5550",
    "metadata": {},
    "outputs": [
@@ -151,6 +136,7 @@
        "      <th>hidden_size</th>\n",
        "      <th>LSTM_layers</th>\n",
        "      <th>vocab_size</th>\n",
+       "      <th>training set size</th>\n",
        "      <th>batch_size</th>\n",
        "      <th>train_loss_10_epochs</th>\n",
        "      <th>val_loss_10_epochs</th>\n",
@@ -164,6 +150,7 @@
        "      <td>512</td>\n",
        "      <td>1</td>\n",
        "      <td>3389</td>\n",
+       "      <td>10k</td>\n",
        "      <td>32</td>\n",
        "      <td>3.088</td>\n",
        "      <td>3.053</td>\n",
@@ -175,6 +162,7 @@
        "      <td>512</td>\n",
        "      <td>3</td>\n",
        "      <td>3389</td>\n",
+       "      <td>10k</td>\n",
        "      <td>128</td>\n",
        "      <td>2.915</td>\n",
        "      <td>2.898</td>\n",
@@ -186,6 +174,7 @@
        "      <td>512</td>\n",
        "      <td>3</td>\n",
        "      <td>2110</td>\n",
+       "      <td>10k</td>\n",
        "      <td>128</td>\n",
        "      <td>2.34</td>\n",
        "      <td>2.306</td>\n",
@@ -197,6 +186,7 @@
        "      <td>512</td>\n",
        "      <td>3</td>\n",
        "      <td>2921</td>\n",
+       "      <td>15k</td>\n",
        "      <td>128</td>\n",
        "      <td>2.372</td>\n",
        "      <td>2.347</td>\n",
@@ -208,6 +198,7 @@
        "      <td>512</td>\n",
        "      <td>3</td>\n",
        "      <td>10192</td>\n",
+       "      <td>15k</td>\n",
        "      <td>64</td>\n",
        "      <td>2.472</td>\n",
        "      <td>2.436</td>\n",
@@ -219,6 +210,7 @@
        "      <td>512</td>\n",
        "      <td>3</td>\n",
        "      <td>2988</td>\n",
+       "      <td>20k</td>\n",
        "      <td>64</td>\n",
        "      <td>2.398</td>\n",
        "      <td>2.455</td>\n",
@@ -230,6 +222,7 @@
        "      <td>512</td>\n",
        "      <td>3</td>\n",
        "      <td>10192</td>\n",
+       "      <td>102k</td>\n",
        "      <td>64</td>\n",
        "      <td>3.072</td>\n",
        "      <td>3.036</td>\n",
@@ -241,6 +234,7 @@
        "      <td>512</td>\n",
        "      <td>3</td>\n",
        "      <td>4699</td>\n",
+       "      <td>20k</td>\n",
        "      <td>128</td>\n",
        "      <td>2.928</td>\n",
        "      <td>2.938</td>\n",
@@ -248,11 +242,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sports_encoder</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>512</td>\n",
+       "      <td>512</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2921</td>\n",
+       "      <td>15k</td>\n",
+       "      <td>128</td>\n",
        "      <td>2.352</td>\n",
        "      <td>2.316</td>\n",
        "      <td>0.261</td>\n",
@@ -262,30 +257,41 @@
        "</div>"
       ],
       "text/plain": [
-       "               embed_size hidden_size LSTM_layers vocab_size batch_size  \\\n",
-       "random_v1             512         512           1       3389         32   \n",
-       "random_v2            1024         512           3       3389        128   \n",
-       "sports_v1            1024         512           3       2110        128   \n",
-       "sports_v2             512         512           3       2921        128   \n",
-       "sports_v4             512         512           3      10192         64   \n",
-       "sports_v5            1024         512           3       2988         64   \n",
-       "everything            512         512           3      10192         64   \n",
-       "random_v3            1024         512           3       4699        128   \n",
-       "sports_encoder        NaN         NaN         NaN        NaN        NaN   \n",
+       "               embed_size hidden_size LSTM_layers vocab_size  \\\n",
+       "random_v1             512         512           1       3389   \n",
+       "random_v2            1024         512           3       3389   \n",
+       "sports_v1            1024         512           3       2110   \n",
+       "sports_v2             512         512           3       2921   \n",
+       "sports_v4             512         512           3      10192   \n",
+       "sports_v5            1024         512           3       2988   \n",
+       "everything            512         512           3      10192   \n",
+       "random_v3            1024         512           3       4699   \n",
+       "sports_encoder        512         512           3       2921   \n",
        "\n",
-       "               train_loss_10_epochs val_loss_10_epochs BLEU-4  \n",
-       "random_v1                     3.088              3.053  0.161  \n",
-       "random_v2                     2.915              2.898  0.177  \n",
-       "sports_v1                      2.34              2.306  0.242  \n",
-       "sports_v2                     2.372              2.347  0.248  \n",
-       "sports_v4                     2.472              2.436   0.23  \n",
-       "sports_v5                     2.398              2.455  0.212  \n",
-       "everything                    3.072              3.036  0.165  \n",
-       "random_v3                     2.928              2.938  0.174  \n",
-       "sports_encoder                2.352              2.316  0.261  "
+       "               training set size batch_size train_loss_10_epochs  \\\n",
+       "random_v1                    10k         32                3.088   \n",
+       "random_v2                    10k        128                2.915   \n",
+       "sports_v1                    10k        128                 2.34   \n",
+       "sports_v2                    15k        128                2.372   \n",
+       "sports_v4                    15k         64                2.472   \n",
+       "sports_v5                    20k         64                2.398   \n",
+       "everything                  102k         64                3.072   \n",
+       "random_v3                    20k        128                2.928   \n",
+       "sports_encoder               15k        128                2.352   \n",
+       "\n",
+       "               val_loss_10_epochs BLEU-4  \n",
+       "random_v1                   3.053  0.161  \n",
+       "random_v2                   2.898  0.177  \n",
+       "sports_v1                   2.306  0.242  \n",
+       "sports_v2                   2.347  0.248  \n",
+       "sports_v4                   2.436   0.23  \n",
+       "sports_v5                   2.455  0.212  \n",
+       "everything                  3.036  0.165  \n",
+       "random_v3                   2.938  0.174  \n",
+       "sports_encoder              2.316  0.261  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6e59168b-6dc3-460b-955f-26537f89bb84",
    "metadata": {},
    "outputs": [
@@ -420,7 +426,7 @@
        "sports_encoder   68.1   50.5   36.1   26.1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "e64c420f-9a6a-4803-ac08-36dd2d97dfbc",
    "metadata": {},
    "outputs": [
@@ -468,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "38f83fe6-8dd0-4f6b-903b-502b748c99de",
    "metadata": {},
    "outputs": [
@@ -521,13 +527,13 @@
     "For most models, we generated the vocabulary using the captions in the training data, with a threshold of 5 for word inclusion. The original paper used 5 as a threshold.\n",
     "\n",
     "We had two theories to test:\n",
-    "1. Given that a lot of our training was on much smaller data sets than the full 128k MS Coco training set, would a threshold of 5 be too high to for inclusion of important words? Our best performing model - `sports_v2` used a threshold of 4. `sports_v2` only differed to `sports_v4` in batch size (128 vs 64) and frequency threshold (4 vs 5). It seems likely that 4 was a good choice training with our smaller datasets of ~15k training images. \n",
-    "2. Another theory was that choosing a larger vocab may help a model to generalise. We set the vocab for `sports_v5` using the ENTIRE train2017 captions. In the event, it seems that `sports_v5` over fit. The validation losses became very volatile as can be seen below, and the BLEU scores were the worst of the sport dataset models we trained."
+    "1. Given that a lot of our training was on much smaller data sets than the full 128k MS Coco training set, would a threshold of 5 be too high to for inclusion of important words? Our best performing model - `sports_v2` used a threshold of 4. All the other sports specific models used a threshold of 5, so it seems likely that threshold of 4 was a good choice training with our smaller datasets of ~15k training images. \n",
+    "2. Another theory was that choosing a larger vocab may help a model to generalise. We set the vocab for `sports_v4` using the ENTIRE train2017 captions. `sports_v4` had similar hyper parameters and data to `sports_v2`: 20k training rather than 15k and a different batch size. The biggest difference was the vocabulary and the larger vocab seemed to inhibit the performance of `sports_v4`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "4d632193-6edc-4824-a421-1d020289df51",
    "metadata": {},
    "outputs": [
